fixed markdown layout on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -162,6 +162,7 @@ hr {
   background-color: #f3f3f3;
   border-radius: 32px;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.7);
+  overflow-wrap: break-word;
 }
 @media (max-width: 932px) {
   .markdownbox {
@@ -198,6 +199,9 @@ hr {
   border-left: 4px solid grey;
   margin: 0;
   padding: 1px 40px;
+}
+.markdownbox .tablewrapper {
+  overflow-x: auto;
 }
 
 .main-header {
