--- a/scss/main.scss
+++ b/scss/main.scss
@@ -150,6 +150,7 @@ hr {
   background-color: #f3f3f3;
   border-radius: 32px;
   box-shadow: 0 2px 15px rgba(0,0,0,0.7);
+  overflow-wrap: break-word;
   @media (max-width: 932px) {
     margin: 16px;
   }
@@ -181,6 +182,9 @@ hr {
     border-left: 4px solid grey;
     margin: 0;
     padding: 1px 40px;
+  }
+  .tablewrapper {
+    overflow-x: auto;
   }
 }
 
